--- a/source/stylesheets/custom/_index.css.scss
+++ b/source/stylesheets/custom/_index.css.scss
@@ -1,230 +1,184 @@
-.hero {
-  background-color: #5f5f5f;
-  // padding-top: 8rem;
-  // height: 1700px;
-}
-.hero__text {
-  color: #fff;
-  font-weight: 600;
-  text-align: center;
-  // font-size: 72px;
-  font-size: 50px;
-  font-weight: 400;
-  margin: 0;
-  line-height: 1.3;
-  padding-top: 12rem;
-  padding-bottom: 1rem;
-}
-.hero__text--black {
-  font-weight: 700;
-}
-.hero__text--first {}
-.hero__text--second {
-  opacity: 0;
-}
-
-// This should not be in index
-.section {
-  margin-top: 8rem;
-}
-
-.section--top {
-  margin-top: 12rem;
-}
-
-.section__header {
-  font-family: Graphit;
-  // font-size: 100px;
-  font-size: 90px;
-  font-weight: 700  ;
-  line-height: 1;
-  margin: 2rem 0;
-  padding: 0;
-}
-.summary__text {
-  font-family: Graphit;
-  font-size: 64px;
-  // font-size: 45px;
-  font-weight: 100;
-  line-height: 1.3;
-  margin: 1.5rem 0;
-  padding: 0;
-}
-.summary__text--keyboard {
-  font-weight: 500;
-}
-
-.progress-footer {
-  display: flex;
-  justify-content: space-between;
-  margin: 3rem 0;
-}
-
-
-.articles-title {
-  font-family: Graphit;
-  font-weight: 600;
-  font-size: 54px;
-  text-align: center;
-  text-decoration: underline;
-}
-.article {
-  margin: 3rem 0;
-  height: 10rem;
-}
-.article a {
-  text-decoration: none;
-}
-.article__title {
-  font-family: Graphit;
-  font-weight: 400;
-  font-size: 34px;
-  margin: 1rem 0;
-  text-align: center;
-  // text-decoration: underline;
-}
-.article__description {
-  font-family: Ivar Soft;
-  font-size: 18px;
-  // text-align: center;
-}
-
-.contact-text {
-  margin-top: 2rem;
-  font-family: Ivar Soft;
-  font-size: 21px;
-  line-height: 2;
-}
-.email-link {
-  
-}
-
-
-
-
-// Keyboard transform
-.keyboard {
-  display: flex;
-  justify-content: center;
-  margin: 0 5vw;
-  background-color: #343434;
-  height: 20vw;
-  width: 90vw;
-  border-radius: 10px;
-  position: fixed;
-  align-items: flex-start; 
-}
-
-.keyboard__keys {
-  justify-content: space-between;
-  display: flex;
-  position: absolute;
-  left: 5%;
-  right: 5%;
-  top: 17%;
-  bottom: -2%;
-}
-
-.octave {
-  // width: 717px;
-  // height: 455px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  position: relative;
-  align-self: center;
-}
-
-.octave-overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-}
-
-.black-key {
-  width: 12.52%;
-  height: 60%;
-  margin: 0 0.25%;
-  background-color: #242424;
-  border-radius: 2%
-}
-
-.white-key {
-  width: 12.52%;
-  height: 100%;
-  margin: 0 0.5%;
-  background-color: #FFFFFF;
-  border-radius: 2%
-}
-
-.white-chonk {
-  height: 39%;
-  margin: 0 0.5%;
-  background-color: #FFFFFF;
-  border-radius: 2%
-}
-
-.white-chonk--skinny {
-  width: 21.3%;
-}
-
-.white-chonk--thicc {
-  width: 22.4%;
-}
-
-.keyboard-space {
-  // height: 100vh;
-  height: 30rem;
-}
-
-.keyboard-container {
-  position: relative;
-  height: 75vh;
-}
-
 body.index {
-  scroll-behavior: smooth;
-}
-
-
-
-/* Animation */
-
-@keyframes fadeInUp {
-  from {
-    transform: translate3d(0,40px,0)
+  .hero {
+    background-color: #5f5f5f;
+  }
+  .hero__text {
+    color: #fff;
+    text-align: center;
+    // font-size: 54px;
+    // font-weight: 400;
+    margin: 0;
+    line-height: 1.3;
+    padding-top: 12rem;
+    padding-bottom: 1rem;
+    opacity: 0;
   }
 
-  to {
-    transform: translate3d(0,0,0);
-    opacity: 1
+  .summary-section {
+    margin-top: 10rem;
   }
-}
-
-@-webkit-keyframes fadeInUp {
-  from {
-    transform: translate3d(0,40px,0)
+  .summary__text {
+    font-family: Graphit;
+    font-size: 64px;
+    // font-size: 45px;
+    font-weight: 100;
+    line-height: 1.3;
+    margin: 1.5rem 0;
+    padding: 0;
+  }
+  .summary__text--keyboard {
+    font-weight: 500;
   }
 
-  to {
-    transform: translate3d(0,0,0);
-    opacity: 1
+  .progress-footer {
+    display: flex;
+    justify-content: space-between;
+    margin: 3rem 0;
   }
-}
 
-.pre-animation {
-  opacity: 0;
-}
+  .articles__subheader {
+    text-align: center;
+    text-decoration: underline;
+  }
+  .articles__footer {
+    text-align: center;
+  }
 
-.fadeInUp {
-  opacity: 0;
-  animation-name: fadeInUp;
-  -webkit-animation-name: fadeInUp;
-  animation-duration: 500ms;
-  animation-fill-mode: both;
-  -webkit-animation-duration: 500ms;
-  -webkit-animation-fill-mode: both
+
+  .contact-text {
+    margin-top: 2rem;
+    font-family: Ivar Soft;
+    line-height: 2;
+  }
+
+
+
+
+  // Keyboard transform
+  .keyboard {
+    display: flex;
+    justify-content: center;
+    margin: 0 5vw;
+    background-color: #343434;
+    height: 20vw;
+    width: 90vw;
+    border-radius: 10px;
+    position: fixed;
+    align-items: flex-start; 
+  }
+
+  .keyboard__keys {
+    justify-content: space-between;
+    display: flex;
+    position: absolute;
+    left: 5%;
+    right: 5%;
+    top: 17%;
+    bottom: -2%;
+  }
+
+  .octave {
+    // width: 717px;
+    // height: 455px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: relative;
+    align-self: center;
+  }
+
+  .octave-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+
+  .black-key {
+    width: 12.52%;
+    height: 60%;
+    margin: 0 0.25%;
+    background-color: #242424;
+    border-radius: 2%
+  }
+
+  .white-key {
+    width: 12.52%;
+    height: 100%;
+    margin: 0 0.5%;
+    background-color: #FFFFFF;
+    border-radius: 2%
+  }
+
+  .white-chonk {
+    height: 39%;
+    margin: 0 0.5%;
+    background-color: #FFFFFF;
+    border-radius: 2%
+  }
+
+  .white-chonk--skinny {
+    width: 21.3%;
+  }
+
+  .white-chonk--thicc {
+    width: 22.4%;
+  }
+
+  .keyboard-space {
+    // height: 100vh;
+    height: 30rem;
+  }
+
+  .keyboard-container {
+    position: relative;
+    height: 75vh;
+  }
+
+  body.index {
+    scroll-behavior: smooth;
+  }
+
+
+
+  /* Animation */
+
+  @keyframes fadeInUp {
+    from {
+      transform: translate3d(0,40px,0)
+    }
+
+    to {
+      transform: translate3d(0,0,0);
+      opacity: 1
+    }
+  }
+
+  @-webkit-keyframes fadeInUp {
+    from {
+      transform: translate3d(0,40px,0)
+    }
+
+    to {
+      transform: translate3d(0,0,0);
+      opacity: 1
+    }
+  }
+
+  .pre-animation {
+    opacity: 0;
+  }
+
+  .fadeInUp {
+    opacity: 0;
+    animation-name: fadeInUp;
+    -webkit-animation-name: fadeInUp;
+    animation-duration: 500ms;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 500ms;
+    -webkit-animation-fill-mode: both
+  }
+
 }
