Apply font styles to practice sessions index and show pages.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,13 +8,13 @@ title: The Linear Isomorphic Keybaord
 
 <!-- Hero -->
 <div class="hero">
-  <h1 class="hero__text graphit-lg-regular js-first-hero-text fadeInUp">
+  <h1 class="hero__text graphit-xl-regular js-first-hero-text fadeInUp">
     <br>
     Is there a better way to design the piano?
   </h1>
   <div class="keyboard-space"></div>
-  <h1 id="second-hero-text" class="hero__text graphit-lg-regular js-second-hero-text">
-    This is the<br><span class="graphit-lg-bold">Linear Isomorphic Keyboard</span>
+  <h1 id="second-hero-text" class="hero__text graphit-xl-regular js-second-hero-text">
+    This is the<br><span class="graphit-xl-bold">Linear Isomorphic Keyboard</span>
   </h1>
   <div class="keyboard-container">
     <%= partial "/partials/keyboard" %>
@@ -61,7 +61,7 @@ title: The Linear Isomorphic Keybaord
 
   <div class="row" style="margin-top: 2rem;">
     <div class="col-6">
-      <a href="/articles#reflections"><h3 class="articles__subheader graphit-lg-bold">Reflections</h3></a>
+      <a href="/articles#reflections"><h3 class="articles__subheader graphit-xl-bold">Reflections</h3></a>
       <div class="articles">
         <div class="article">
           <a href="/reflections/reflection-3">
@@ -99,7 +99,7 @@ title: The Linear Isomorphic Keybaord
       </div>
     </div>
     <div class="col-6">
-      <a href="/articles"><h3 class="articles__subheader graphit-lg-bold">Articles</h3></a>
+      <a href="/articles"><h3 class="articles__subheader graphit-xl-bold">Articles</h3></a>
       <div class="articles"> 
         <div class="article">
           <a href="/articles/the-idea">
