--- a/source/stylesheets/custom/_article.css.scss
+++ b/source/stylesheets/custom/_article.css.scss
@@ -4,11 +4,11 @@
   font-weight: 300;
   
   // Make these 
-  // Same as .graphit-xl-bold
+  // Same as .graphit-xxl-bold
   h1 {
     font-family: Graphit;
     font-weight: 600;
-    font-size: 75px;
+    font-size: 774px;
     // Escape the grid on the right side
     margin-right: calc(-50vw + 50%);
     margin-bottom: 4rem;
