--- a/source/stylesheets/custom/_practice-session-show.css.scss
+++ b/source/stylesheets/custom/_practice-session-show.css.scss
@@ -12,10 +12,7 @@
     display: inline-block;
     color: $color-gray;
   }
-  // MAKE MOBILE
   .practice-session__notes {
-    font-weight: 400;
-    font-size: 21px;
     margin: 0 2rem;
   }
 
@@ -27,10 +24,9 @@
   }
   .domain-header, 
   .total-header {
-    // font-size: 54px;
-    // font-weight: 500;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
   .domain-header__time,
   .total-header__time {
@@ -38,47 +34,44 @@
   }
   .domain-header__divider {
     flex-grow: 1;
-    border-bottom: 6px solid $color-gray;
-    margin: 0 1.5rem 2.1rem;
+    border-top: 3px solid $color-gray;
+    border-bottom: 3px solid $color-gray;
+    height: 0;
+    margin: 0 1.5rem 0;
   }
 
-  .exercise-sets {
-    margin: 1rem 0;
-  }
   .exercise-set {
-    font-weight: 100;
     margin: 1rem 0;
   }
   .exercise-set__header {
     display: flex;
     justify-content: space-between;
-    // font-size: 32px;
-    // font-weight: 100;
+    align-items: center;
+
   }
   .exercise-set__time {
     color: $color-gray;
   }
   .exercise-set__divider {
     flex-grow: 1;
-    border-bottom: 3px solid $color-gray;
-    margin:  0 1.5rem 1.3rem;
+    border-top: 1.5px solid $color-gray;
+    border-bottom: 1.5px solid $color-gray;
+    height: 0;
+    margin:  0 1.5rem 0;
   }
 
   .exercise-set__data {
-    font-weight: 100;
     display: flex;
     justify-content: space-between;
   }
-  // MAKE MOBILE
   .exercise-set__increment {
     margin: 0.3rem;
-    font-size: 18px;
   }
   .exercise-set__increments-summary {
     max-width: 10rem;
     text-align: right;
     color: $color-gray;
-    font-size: 18px;
+    margin: 0.3rem 0;
   }
 
 
@@ -86,8 +79,6 @@
     margin: 4rem 0 3rem;
   }
   .total-increments {
-    // font-weight: 100;
-    // font-size: 32px;
     margin: 1rem 0 1rem 40px;
   }
 
