Apply mobile text styling across the app. Begin general mobile styling.

--- a/source/articles/the-hypotheses-old.html.md.erb
+++ b/source/articles/the-hypotheses-old.html.md.erb
@@ -35,7 +35,7 @@ On the TK there are twelve different shapes for any given scale, but how many sh
 
 <% end %>
 
-<div class="intervals-shapes-section">
+<div class="intervals-shapes-section ivar-soft-xs-regular">
   <div class="intervals-shapes-graph__label"><h2>TK</h2></div>
   <div class="intervals-shapes-graph intervals-shapes-graph--tk">
     <div class="nodes intervals">
