--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -42,7 +42,7 @@ Below is a graph of all of the twelve intervals within an octave, and all of the
 <% end %>
 
 
-<div class="intervals-shapes-section breakout">
+<div class="intervals-shapes-section ivar-soft-xs-regular breakout">
   <h3 class="intervals-shapes-graph__label">TK</h3>
   <div class="intervals-shapes-graph intervals-shapes-graph--tk">
     <div class="nodes intervals">
