--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -60,14 +60,14 @@ title: The Linear Isomorphic Keybaord
   </div>
 
   <div class="row" style="margin-top: 2rem;">
-    <div class="col-6">
+    <div class="col-sm-12 col-md-6">
       <a href="/articles#reflections"><h3 class="articles__subheader graphit-xl-bold">Reflections</h3></a>
       <div class="articles">
         <div class="article">
           <a href="/reflections/reflection-3">
             <h4 class="article__title">Reflection #3: 33 Hours</h4>
             <div class="row justify-content-center">
-              <div class="col-10 ivar-soft-sm-regular">
+              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
                 &nbsp;&nbsp;&nbsp;&nbsp;I reflect on why the Linear Isomorphic Keyboard’s meteoric improvement, as well as strategies for sight reading and playing by ear that are tailored to each keyboard.
               </div>
             </div>
@@ -77,7 +77,7 @@ title: The Linear Isomorphic Keybaord
           <a href="/reflections/reflection-2">
             <h4 class="article__title">Reflection #2: 15 Hours</h4>
             <div class="row justify-content-center">
-              <div class="col-10 ivar-soft-sm-regular">
+              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
                 &nbsp;&nbsp;&nbsp;&nbsp;I reflect on my slow progress on the Linear Isomorphic Keyboard, how I can improve exercises that use software, as well as my philosophy of how I should practice to improve depending on the content.
               </div>
             </div>
@@ -87,7 +87,7 @@ title: The Linear Isomorphic Keybaord
           <a href="/reflections/reflection-1/">
             <h4 class="article__title">Reflection #1: The Assessment</h4>
             <div class="row justify-content-center">
-              <div class="col-10 ivar-soft-sm-regular">
+              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
                 &nbsp;&nbsp;&nbsp;&nbsp;In my efforts to get the experiment underway the initial assessment was done hastily, causing several small mistakes, as well as a blunder that was as interesting as it was humbling.
               </div>
             </div>
@@ -98,14 +98,14 @@ title: The Linear Isomorphic Keybaord
         <a href="/articles" class="">more reflections</a>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-sm-12 col-md-6">
       <a href="/articles"><h3 class="articles__subheader graphit-xl-bold">Articles</h3></a>
       <div class="articles"> 
         <div class="article">
           <a href="/articles/the-idea">
             <h4 class="article__title">The Idea</h4>
             <div class="row justify-content-center">
-              <div class="col-10 ivar-soft-sm-regular">
+              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
                 &nbsp;&nbsp;&nbsp;&nbsp;The Traditional Keyboard design was fantastic for its time, but music changed radically since, and now the Linear Isomorphic Keyboard offers a possible improvement.
               </div>
             </div>
@@ -115,7 +115,7 @@ title: The Linear Isomorphic Keybaord
           <a href="/articles/the-hypotheses">
             <h4 class="article__title">The Hypotheses</h4>
             <div class="row justify-content-center">
-              <div class="col-10 ivar-soft-sm-regular">
+              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
                 &nbsp;&nbsp;&nbsp;&nbsp;I have a handful of predictions of how the Linear Isomorphic Keyboard will compare to the Traditional Keyboard, and these hypotheses are based on yet another hypothesis: the isomorphic advantage.
               </div>
             </div>
@@ -125,7 +125,7 @@ title: The Linear Isomorphic Keybaord
           <a href="/articles/the-experiment">
             <h4 class="article__title">The Experiment</h4>
             <div class="row justify-content-center">
-              <div class="col-10 ivar-soft-sm-regular">
+              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
                 &nbsp;&nbsp;&nbsp;&nbsp;In this article I define "playability", explain how I will practice and measure improvement, and reflect on flaws in the experiment.
               </div>
             </div>
