--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -1,9 +1,6 @@
-<footer class="container">
+<footer class="container graphit-xs-regular">
   <div>
-<!--     <div class="footer-logo">
-    <%# svg "LIK-logo" %></div> -->
-
-    The <span style="font-weight: 400;">Linear Isomorphic Keyboard</span> by <a href="markjanzer.io">Mark Janzer</a>
+    The <span class="emphasis">Linear Isomorphic Keyboard</span> by <a href="markjanzer.io">Mark Janzer</a>
   </div>
   <div class="footer-date"></div>
 </footer>
