--- a/source/stylesheets/custom/_article.css.scss
+++ b/source/stylesheets/custom/_article.css.scss
@@ -1,29 +1,44 @@
 .article-show {
   font-family: Ivar Text;
-  font-size: 21px;
-  font-weight: 300;
-  
+  font-weight: 400;
+  font-size: 1.125rem;
+  @media screen and (min-width: 576px) {
+    font-size: 1.3125rem;
+  }
+
   // Make these 
   // Same as .graphit-xxl-bold
   h1 {
-    font-family: Graphit;
-    font-weight: 600;
-    font-size: 774px;
     // Escape the grid on the right side
     margin-right: calc(-50vw + 50%);
     margin-bottom: 4rem;
+
+    font-family: Graphit;
+    font-weight: 600;
+    font-size: 3rem;
+    @media screen and (min-width: 576px) {
+      font-size: 4.5rem;
+    }
   }
   h2 {
+    margin: 4rem 0 2rem;
+
     font-family: Ivar Display;
     font-weight: 600;
-    font-size: 48px;
-    margin: 4rem 0 2rem;
+    font-size: 2rem;
+    @media screen and (min-width: 576px) {
+      font-size: 3rem
+    }
   }
   h3 {
+    margin: 2.5rem 0 1rem;
+
     font-family: Ivar Display;
     font-weight: 600;
-    font-size: 32px;
-    margin: 2.5rem 0 1rem;
+    font-size: 1.3125rem;
+    @media screen and (min-width: 576px) {
+      font-size: 2rem
+    }
   }
 
   a {
@@ -38,7 +53,18 @@
 
   p {
     margin: 1rem 0;
-    line-height: 1.7;
+    line-height: 1.5;
+    @media screen and (min-width: 576px) {
+      line-height: 1.7;
+    }
+  }
+
+  .footnotes {
+    margin-top: 8rem;
+    font-size: 0.8rem;
+    @media screen and (min-width: 576px) {
+      font-size: 1rem;
+    }
   }
 
   ul {
@@ -51,11 +77,6 @@
 
   ul.ct-legend {
     margin: 0;
-  }
-
-  .footnotes {
-    margin-top: 8rem;
-    font-size: 16px;
   }
 
   // Escaping the layout
