Style summary text and hero for mobile.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,14 +8,22 @@ title: The Linear Isomorphic Keybaord
 
 <!-- Hero -->
 <div class="hero">
-  <h1 class="hero__text graphit-xl-regular js-first-hero-text fadeInUp">
-    <br>
-    Is there a better way to design the piano?
-  </h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 hero__text-space js-first-hero-text">
+        <div class="hero__text graphit-xl-regular fadeInUp">
+          <br>
+          Is there a better way to design the piano?
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="keyboard-space"></div>
-  <h1 id="second-hero-text" class="hero__text graphit-xl-regular js-second-hero-text">
-    This is the<br><span class="graphit-xl-bold">Linear Isomorphic Keyboard</span>
-  </h1>
+  <div class="col-12 hero__text-space js-second-hero-text-area">
+    <div id="second-hero-text" class="hero__text graphit-xl-regular js-second-hero-text">
+      This is the<br><span class="graphit-xl-bold">Linear Isomorphic Keyboard</span>
+    </div>
+  </div>
   <div class="keyboard-container">
     <%= partial "/partials/keyboard" %>
   </div>
@@ -27,10 +35,10 @@ title: The Linear Isomorphic Keybaord
     <h2 class="col-sm-12 col-lg-6 section__header">This is an experiment</h2>
   </div>
   <div class="row">
-    <div class="col-sm-12 col-lg-10 summary__text">
-      I am exploring how the Linear Isomorphic Keyboard (<span class="summary__text--keyboard">LIK</span>) compares to the Traditional Keyboard (<span class="summary__text--keyboard">TK</span>).
+    <div class="col-sm-12 col-lg-10 summary__text graphit-xl-regular">
+      I am exploring how the Linear Isomorphic Keyboard (LIK) compares to the Traditional Keyboard (TK).
     </div>
-    <div class="col-sm-12 col-lg-10 summary__text">I am practicing both keyboards for the same amount of time, playing the <a href="" class="summary__text--link">same exercises</a>, and <a href="" class="summary__text--link">recording everything</a>.</div>
+    <div class="col-sm-12 col-lg-10 summary__text graphit-xl-regular">I am practicing both keyboards for the same amount of time, playing the same exercises, and recording everything.</div>
   </div>
 </div>
 
