--- a/source/stylesheets/custom/_index.css.scss
+++ b/source/stylesheets/custom/_index.css.scss
@@ -2,29 +2,43 @@ body.index {
   .hero {
     background-color: #5f5f5f;
   }
+  .hero__text-space {
+    position: relative;
+    // margin-top: calc(50vh - 4rem - 0.5rem - 10vw);
+    // margin-bottom: 1rem;
+    // height: 8rem; // 3lines 2rem w/ 1.3 line-height
+    height: calc(50vh - 10vw + 4rem);
+    
+  }
   .hero__text {
+    position: absolute;
     color: #fff;
     text-align: center;
-    margin: 0;
     line-height: 1.3;
-    padding-top: 12rem;
-    padding-bottom: 1rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    bottom: 1rem;
+    // Naw I need to calculate height of the text
+    // padding-top: calc(50vh - 10vw - 1rem - 8rem);
     opacity: 0;
+    
+
+    // @media screen and (min-width: 576px) {
+    //   height: 8rem; // 2lines 3rem w/ 1.3 line-height
+    // }
   }
 
   .summary-section {
     margin-top: 10rem;
   }
   .summary__text {
-    font-family: Graphit;
-    font-size: 64px;
-    font-weight: 100;
+    // font-family: Graphit;
+    // font-size: 64px;
+    // font-weight: 100;
     line-height: 1.3;
     margin: 1.5rem 0;
     padding: 0;
-  }
-  .summary__text--keyboard {
-    font-weight: 500;
   }
 
   .progress-footer {
@@ -126,7 +140,8 @@ body.index {
 
   .keyboard-space {
     // height: 100vh;
-    height: 30rem;
+    // height: 30rem;
+    height: calc(50vh + 10vw - 4rem);
   }
 
   .keyboard-container {
