Finish mobile styling for homepage.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -107,7 +107,7 @@ title: The Linear Isomorphic Keybaord
       </div>
     </div>
     <div class="col-sm-12 col-md-6">
-      <a href="/articles"><h3 class="articles__subheader graphit-xl-bold">Articles</h3></a>
+      <a href="/articles"><h3 class="articles__subheader articles__subheader--second graphit-xl-bold">Articles</h3></a>
       <div class="articles"> 
         <div class="article">
           <a href="/articles/the-idea">
