--- a/source/stylesheets/custom/_index.css.scss
+++ b/source/stylesheets/custom/_index.css.scss
@@ -4,9 +4,7 @@ body.index {
   }
   .hero__text-space {
     position: relative;
-    // margin-top: calc(50vh - 4rem - 0.5rem - 10vw);
-    // margin-bottom: 1rem;
-    // height: 8rem; // 3lines 2rem w/ 1.3 line-height
+    // Half of page height - half of piano height + half of text height
     height: calc(50vh - 10vw + 4rem);
     
   }
@@ -19,26 +17,18 @@ body.index {
     right: 0;
     margin: 0 auto;
     bottom: 1rem;
-    // Naw I need to calculate height of the text
-    // padding-top: calc(50vh - 10vw - 1rem - 8rem);
     opacity: 0;
-    
-
-    // @media screen and (min-width: 576px) {
-    //   height: 8rem; // 2lines 3rem w/ 1.3 line-height
-    // }
   }
 
   .summary-section {
-    margin-top: 10rem;
+    margin-top: 6rem;
+    @media screen and (min-width: 576px) {
+      margin-top: 10rem;
+    }
   }
   .summary__text {
-    // font-family: Graphit;
-    // font-size: 64px;
-    // font-weight: 100;
     line-height: 1.3;
     margin: 1.5rem 0;
-    padding: 0;
   }
 
   .progress-footer {
@@ -50,7 +40,18 @@ body.index {
   .articles__subheader {
     text-align: center;
     text-decoration: underline;
+    margin: 2rem 0 0;
+    @media screen and (min-width: 576px) {
+      margin: 0;
+    }
   }
+
+  .articles__subheader--second {
+    @media screen and (max-width: 575px) {
+      margin: 6rem 0 0;
+    }
+  }
+
   .articles__footer {
     text-align: center;
   }
@@ -139,8 +140,7 @@ body.index {
   }
 
   .keyboard-space {
-    // height: 100vh;
-    // height: 30rem;
+    // The inverse of .hero__text-space
     height: calc(50vh + 10vw - 4rem);
   }
 
