--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -153,11 +153,9 @@ title: The Linear Isomorphic Keybaord
   </div>
 
   <div class="row">
-    <div class="col-12">
+    <div class="col-sm-12 col-md-8">
       <div class="contact-text">
-        Have any questions, comments, propositions, qualms, or exclamations?
-        <br>
-        I'm happy to talk, you can reach me at <a href="mailto:linearisomorphickeyboard@gmail.com">linearisomorphickeyboard@gmail.com</a>
+        Have any questions, comments, propositions, qualms, or exclamations? I'm happy to talk, you can reach me at <a href="mailto:linearisomorphickeyboard@gmail.com">linearisomorphickeyboard@gmail.com</a>
       </div>
     </div>
   </div>
