--- a/source/reflections/reflection-2.html.md.erb
+++ b/source/reflections/reflection-2.html.md.erb
@@ -26,7 +26,7 @@ Overall, I think that my improvement on the major scale is going slower than exp
 <% scales = data.exercise_sets.find { |es| es.name == "Scales & Arpeggios" } %>
 <script>
   var scales_data = <%= exercise_set_progress(scales, practice_sessions).to_json %>
-  new Chartist.Line('.scales-chart', scales_data, basicOptions);
+  createChart('.scales-chart', scales_data);
 </script>
 
 ### Hanon
@@ -42,7 +42,7 @@ The very reason this exercise is difficult for the LIK is the reason why it is e
 <% hanon = data.exercise_sets.find { |es| es.name == "Hanon" } %>
 <script>
   var hanon_data = <%= exercise_set_progress(hanon, practice_sessions).to_json %>
-  new Chartist.Line('.hanon-chart', hanon_data, basicOptions);
+  createChart('.hanon-chart', hanon_data);
 </script>
 
 ### Sight reading
@@ -55,7 +55,7 @@ Sight reading is going about as I expected to go: considerably better for the tr
 <% sight_reading = data.exercise_sets.find { |es| es.name == "EarMaster Sight Reading" } %>
 <script>
   var sight_reading_data = <%= exercise_set_progress(sight_reading, practice_sessions).to_json %>
-  new Chartist.Line('.sight-reading-chart', sight_reading_data, basicOptions);
+  createChart('.sight-reading-chart', sight_reading_data);
 </script>
 
 ### Playing by ear
@@ -71,7 +71,7 @@ The thing that has surprised me the most with these exercises is the extent that
 <% playing_by_ear = data.exercise_sets.find { |es| es.name == "EarMaster Playing By Ear" } %>
 <script>
   var playing_by_ear_data = <%= exercise_set_progress(playing_by_ear, practice_sessions).to_json %>
-  new Chartist.Line('.playing-by-ear-chart', playing_by_ear_data, basicOptions);
+  createChart('.playing-by-ear-chart', playing_by_ear_data);
 </script>
 
 ## On practicing
